# imessage-rag

./: .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml
scripts/: setup.sh
src/: chunker.py  cli.py  embed.py  mcp_server.py  vectordb.py
src/imessage_rag/: chunker.py  cli.py  config.py  contacts.py  embed.py  generate.py  ingest.py  mcp_server.py  query.py  settings.py  vectordb.py
src/imessage_rag/web/: app.py  tasks.py
src/imessage_rag/web/routes/: ingest.py  query.py  settings.py  status.py
src/imessage_rag/web/static/: style.css
src/imessage_rag/web/templates/: base.html  index.html  ingest.html  settings.html  status.html
src/imessage_rag/web/templates/partials/: ingest_progress.html  status_cards.html
src/ingest/: email.py  imessage.py
src/web/: app.py  tasks.py
src/web/routes/: ingest.py  query.py  settings.py
src/web/templates/: ingest.html
src/web/templates/partials/: ingest_progress.html
tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_contacts.py  test_email.py  test_embed.py  test_imessage.py  test_ingest.py  test_mcp_server.py  test_query.py  test_settings.py  test_vectordb.py  test_web_app.py
