[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imessage-rag"
version = "0.1.0"
description = "Local-only semantic search and Q&A over your iMessage history."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Santi Pochat" }]
dependencies = [
    "numpy>=2.0,<3",
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.18,<1",
]

[project.optional-dependencies]
test = ["pytest>=8.0,<9"]

[project.scripts]
imessage-rag     = "imessage_rag.cli:main"
imessage-rag-mcp = "imessage_rag.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["imessage_rag*"]
